--- a/notebooks/Project.ipynb
+++ b/notebooks/Project.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -24,15 +24,14 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "\n",
+    "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "import torchvision\n",
-    "import numpy as np"
+    "import torchvision"
    ]
   },
   {
@@ -42,27 +41,26 @@
    "outputs": [],
    "source": [
     "# Reading JSON and separating elements.\n",
-    "db = pd.read_json('full_format_recipes.json')\n",
+    "db = pd.read_json(\"../data/full_format_recipes.json\")\n",
     "\n",
-    "directions = db[: 0]\n",
-    "fat = db[: 1]\n",
-    "date = db[: 2]\n",
-    "categories = db[: 3]\n",
-    "calories = db[: 4]\n",
-    "desc = db[: 5]\n",
-    "ingredients = db[: 6]\n",
-    "protein = db[: 7]\n",
-    "rating = db[: 8]\n",
-    "title = db[: 9]\n",
-    "sodium = db[: 10]\n",
-    "\n",
+    "directions = db[\"directions\"]\n",
+    "fat = db[\"fat\"]\n",
+    "date = db[\"date\"]\n",
+    "categories = db[\"categories\"]\n",
+    "calories = db[\"calories\"]\n",
+    "desc = db[\"desc\"]\n",
+    "ingredients = db[\"ingredientes\"]\n",
+    "protein = db[\"protein\"]\n",
+    "rating = db[\"rating\"]  # Output variable\n",
+    "title = db[\"title\"]\n",
+    "sodium = db[\"sodium\"]\n",
     "\n",
     "\n",
     "# In the Back of Words (BOW) we do some text processing to delete words with no deep meaning\n",
     "# Tools: SPACY (recomended) / GENSIM ---- How to access vector of words\n",
     "# TF IDF (tutorial available)\n",
-    "# Word embedding ==> Every word in the vocabulary will compose a vector (first map words into vectors) \n",
-    "# Contextual embeddings ==> More complex, Neural Networks to compute them"
+    "# Word embedding ==> Every word in the vocabulary will compose a vector (first map words into vectors)\n",
+    "# Contextual embeddings ==> More complex, Neural Networks to compute them\n"
    ]
   },
   {
@@ -70,7 +68,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(directions)"
+   ]
   }
  ],
  "metadata": {
@@ -91,7 +91,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
