--- a/notebooks/proyecto_v3.ipynb
+++ b/notebooks/proyecto_v3.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -194,24 +194,26 @@
    ],
    "source": [
     "# Get the Top 10 most common categories\n",
-    "category_counts = df['categories'].explode().value_counts()[:15]\n",
+    "category_counts = df[\"categories\"].explode().value_counts()[:15]\n",
     "top_categories = category_counts.index\n",
     "\n",
-    "df['categories'] = df['categories'].apply(lambda x: x if isinstance(x, list) else [])\n",
-    "filtered_data = df[df['categories'].apply(lambda x: any(cat in top_categories for cat in x))]\n",
+    "df[\"categories\"] = df[\"categories\"].apply(lambda x: x if isinstance(x, list) else [])\n",
+    "filtered_data = df[\n",
+    "    df[\"categories\"].apply(lambda x: any(cat in top_categories for cat in x))\n",
+    "]\n",
     "\n",
     "# Create a category-rating relationship\n",
-    "category_rating = filtered_data.explode('categories')\n",
-    "category_rating = category_rating[category_rating['categories'].isin(top_categories)]\n",
+    "category_rating = filtered_data.explode(\"categories\")\n",
+    "category_rating = category_rating[category_rating[\"categories\"].isin(top_categories)]\n",
     "\n",
     "plt.figure(figsize=(12, 6))\n",
-    "sns.boxplot(x='categories', y='rating', data=category_rating)\n",
+    "sns.boxplot(x=\"categories\", y=\"rating\", data=category_rating)\n",
     "plt.xticks(rotation=45)\n",
-    "plt.title('Average Ratings per Category')\n",
-    "plt.xlabel('Category')\n",
-    "plt.ylabel('Rating')\n",
+    "plt.title(\"Average Ratings per Category\")\n",
+    "plt.xlabel(\"Category\")\n",
+    "plt.ylabel(\"Rating\")\n",
     "plt.legend()\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -223,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -238,14 +240,11 @@
     }
    ],
    "source": [
-    "numerical_cols = ['rating', 'fat', 'protein', 'calories', 'sodium']\n",
+    "numerical_cols = [\"rating\", \"fat\", \"protein\", \"calories\", \"sodium\"]\n",
     "plt.figure(figsize=(10, 8))\n",
-    "sns.heatmap(df[numerical_cols].corr(), \n",
-    "            annot=True, \n",
-    "            cmap='coolwarm',\n",
-    "            center=0)\n",
-    "plt.title('Correlation between Numerical Features')\n",
-    "plt.show()"
+    "sns.heatmap(df[numerical_cols].corr(), annot=True, cmap=\"coolwarm\", center=0)\n",
+    "plt.title(\"Correlation between Numerical Features\")\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -257,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -283,17 +282,17 @@
    ],
    "source": [
     "plt.figure(figsize=(10, 6))\n",
-    "sns.histplot(data=df, x='rating_pre', bins=20)\n",
-    "plt.title('Distribution of Ratings')\n",
-    "plt.xlabel('Rating')\n",
-    "plt.ylabel('Count')\n",
+    "sns.histplot(data=df, x=\"rating_pre\", bins=20)\n",
+    "plt.title(\"Distribution of Ratings\")\n",
+    "plt.xlabel(\"Rating\")\n",
+    "plt.ylabel(\"Count\")\n",
     "plt.show()\n",
     "\n",
     "# Add boxplot to see outliers\n",
     "plt.figure(figsize=(10, 4))\n",
-    "sns.boxplot(x=df['rating_pre'])\n",
-    "plt.title('Rating Distribution and Outliers')\n",
-    "plt.show()"
+    "sns.boxplot(x=df[\"rating_pre\"])\n",
+    "plt.title(\"Rating Distribution and Outliers\")\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -305,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 544,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -321,12 +320,12 @@
    ],
    "source": [
     "fig, axes = plt.subplots(2, 2, figsize=(15, 10))\n",
-    "sns.scatterplot(data=df, x='fat', y='rating', ax=axes[0,0])\n",
-    "sns.scatterplot(data=df, x='protein', y='rating', ax=axes[0,1])\n",
-    "sns.scatterplot(data=df, x='calories', y='rating', ax=axes[1,0])\n",
-    "sns.scatterplot(data=df, x='sodium', y='rating', ax=axes[1,1])\n",
+    "sns.scatterplot(data=df, x=\"fat\", y=\"rating\", ax=axes[0, 0])\n",
+    "sns.scatterplot(data=df, x=\"protein\", y=\"rating\", ax=axes[0, 1])\n",
+    "sns.scatterplot(data=df, x=\"calories\", y=\"rating\", ax=axes[1, 0])\n",
+    "sns.scatterplot(data=df, x=\"sodium\", y=\"rating\", ax=axes[1, 1])\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -338,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -353,22 +352,22 @@
     }
    ],
    "source": [
-    "df['directions_length'] = df['directions'].str.len()\n",
-    "df['desc_length'] = df['desc'].str.len()\n",
-    "df['title_length'] = df['title'].str.len()\n",
+    "df[\"directions_length\"] = df[\"directions\"].str.len()\n",
+    "df[\"desc_length\"] = df[\"desc\"].str.len()\n",
+    "df[\"title_length\"] = df[\"title\"].str.len()\n",
     "\n",
     "plt.figure(figsize=(15, 5))\n",
     "plt.subplot(131)\n",
-    "sns.boxplot(y=df['directions_length'])\n",
-    "plt.title('Directions Length')\n",
+    "sns.boxplot(y=df[\"directions_length\"])\n",
+    "plt.title(\"Directions Length\")\n",
     "plt.subplot(132)\n",
-    "sns.boxplot(y=df['desc_length'])\n",
-    "plt.title('Description Length')\n",
+    "sns.boxplot(y=df[\"desc_length\"])\n",
+    "plt.title(\"Description Length\")\n",
     "plt.subplot(133)\n",
-    "sns.boxplot(y=df['title_length'])\n",
-    "plt.title('Title Length')\n",
+    "sns.boxplot(y=df[\"title_length\"])\n",
+    "plt.title(\"Title Length\")\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -380,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -395,15 +394,15 @@
     }
    ],
    "source": [
-    "df['date'] = pd.to_datetime(df['date'])\n",
-    "df['year'] = df['date'].dt.year\n",
-    "df['month'] = df['date'].dt.month\n",
+    "df[\"date\"] = pd.to_datetime(df[\"date\"])\n",
+    "df[\"year\"] = df[\"date\"].dt.year\n",
+    "df[\"month\"] = df[\"date\"].dt.month\n",
     "\n",
     "plt.figure(figsize=(12, 6))\n",
-    "sns.boxplot(x='year', y='rating', data=df)\n",
-    "plt.title('Rating Distribution by Year')\n",
+    "sns.boxplot(x=\"year\", y=\"rating\", data=df)\n",
+    "plt.title(\"Rating Distribution by Year\")\n",
     "plt.xticks(rotation=45)\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -415,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -431,11 +430,11 @@
    ],
    "source": [
     "plt.figure(figsize=(12, 6))\n",
-    "df['categories'].value_counts().head(10).plot(kind='bar')\n",
-    "plt.title('Top 10 Recipe Categories')\n",
+    "df[\"categories\"].value_counts().head(10).plot(kind=\"bar\")\n",
+    "plt.title(\"Top 10 Recipe Categories\")\n",
     "plt.xticks(rotation=45)\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -1691,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1703,7 +1702,7 @@
     "    nn.ReLU(),\n",
     "    nn.Dropout(0.3),  # Add dropout\n",
     "    nn.Linear(64, 1),\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -1842,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1902,7 +1901,7 @@
     "ax4.grid(True)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -1997,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2023,6 +2022,7 @@
    ],
    "source": [
     "from gensim.models import Word2Vec\n",
+    "\n",
     "sentences = [text.split() for text in df[\"directions_post\"]]\n",
     "vector_size = 100\n",
     "\n",
@@ -2095,7 +2095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2107,7 +2107,7 @@
     "    nn.ReLU(),\n",
     "    nn.Dropout(0.3),  # Add dropout\n",
     "    nn.Linear(64, 1),\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -2514,7 +2514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2527,13 +2527,13 @@
     "    nn.ReLU(),\n",
     "    nn.BatchNorm1d(64),\n",
     "    nn.Dropout(0.1),\n",
-    "    nn.Linear(64, 1)\n",
-    ")"
+    "    nn.Linear(64, 1),\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2576,11 +2576,11 @@
     "criterion = nn.MSELoss()\n",
     "optimizer = optim.Adam(model_ML.parameters(), lr=0.0005)  # Lower learning rate\n",
     "scheduler = optim.lr_scheduler.ReduceLROnPlateau(\n",
-    "    optimizer, \n",
-    "    mode='min', \n",
+    "    optimizer,\n",
+    "    mode=\"min\",\n",
     "    factor=0.2,  # More aggressive LR reduction\n",
-    "    patience=5,   # Reduced patience\n",
-    "    verbose=True\n",
+    "    patience=5,  # Reduced patience\n",
+    "    verbose=True,\n",
     ")\n",
     "\n",
     "# Training loop\n",
@@ -2593,8 +2593,8 @@
     "    num_batches = 0\n",
     "\n",
     "    for i in range(0, len(X_train_t), batch_size):\n",
-    "        batch_X = X_train_t[i:i+batch_size]\n",
-    "        batch_y = y_train_t[i:i+batch_size]\n",
+    "        batch_X = X_train_t[i : i + batch_size]\n",
+    "        batch_y = y_train_t[i : i + batch_size]\n",
     "\n",
     "        outputs = model_ML(batch_X)\n",
     "        loss = criterion(outputs, batch_y)\n",
@@ -2614,18 +2614,20 @@
     "    with torch.no_grad():\n",
     "        train_predictions = model_ML(X_train_t)\n",
     "        test_predictions = model_ML(X_test_t)\n",
-    "        \n",
+    "\n",
     "        # Convert back to original scale for R² calculation\n",
     "        train_pred_orig = target_scaler.inverse_transform(train_predictions.numpy())\n",
     "        test_pred_orig = target_scaler.inverse_transform(test_predictions.numpy())\n",
     "        y_train_orig = target_scaler.inverse_transform(y_train_t.numpy())\n",
     "        y_test_orig = target_scaler.inverse_transform(y_test_t.numpy())\n",
-    "        \n",
+    "\n",
     "        train_r2 = r2_score(y_train_orig, train_pred_orig)\n",
     "        test_r2 = r2_score(y_test_orig, test_pred_orig)\n",
     "\n",
     "    if (epoch + 1) % 5 == 0:\n",
-    "        print(f\"Epoch [{epoch+1}/{epochs}], Loss: {avg_loss:.4f}, Train R²: {train_r2:.4f}, Test R²: {test_r2:.4f}\")"
+    "        print(\n",
+    "            f\"Epoch [{epoch+1}/{epochs}], Loss: {avg_loss:.4f}, Train R²: {train_r2:.4f}, Test R²: {test_r2:.4f}\"\n",
+    "        )\n"
    ]
   },
   {
@@ -2654,13 +2656,13 @@
     "with torch.no_grad():\n",
     "    train_predictions = model_ML(X_train_t)\n",
     "    test_predictions = model_ML(X_test_t)\n",
-    "    \n",
+    "\n",
     "    # Convert predictions back to original scale\n",
     "    train_pred_orig = target_scaler.inverse_transform(train_predictions.numpy())\n",
     "    test_pred_orig = target_scaler.inverse_transform(test_predictions.numpy())\n",
     "    y_train_orig = target_scaler.inverse_transform(y_train_t.numpy())\n",
     "    y_test_orig = target_scaler.inverse_transform(y_test_t.numpy())\n",
-    "    \n",
+    "\n",
     "    train_mse_HF = mean_squared_error(y_train_orig, train_pred_orig)\n",
     "    train_r2_HF = r2_score(y_train_orig, train_pred_orig)\n",
     "    test_mse_HF = mean_squared_error(y_test_orig, test_pred_orig)\n",
@@ -2672,7 +2674,7 @@
     "\n",
     "print(\"\\nTest Set Metrics:\")\n",
     "print(f\"MSE: {test_mse:.4f}\")\n",
-    "print(f\"R²: {test_r2:.4f}\")"
+    "print(f\"R²: {test_r2:.4f}\")\n"
    ]
   },
   {
@@ -2749,7 +2751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2779,10 +2781,24 @@
     "x = np.arange(len(models_nn))\n",
     "width = 0.35\n",
     "\n",
-    "ax1.bar(x - width/2, r2_result_train_nn, width, label='Train', color='skyblue', edgecolor='black')\n",
-    "ax1.bar(x + width/2, r2_result_test_nn, width, label='Test', color='lightcoral', edgecolor='black')\n",
-    "ax1.set_ylabel('R² Score')\n",
-    "ax1.set_title('Neural Networks Models')\n",
+    "ax1.bar(\n",
+    "    x - width / 2,\n",
+    "    r2_result_train_nn,\n",
+    "    width,\n",
+    "    label=\"Train\",\n",
+    "    color=\"skyblue\",\n",
+    "    edgecolor=\"black\",\n",
+    ")\n",
+    "ax1.bar(\n",
+    "    x + width / 2,\n",
+    "    r2_result_test_nn,\n",
+    "    width,\n",
+    "    label=\"Test\",\n",
+    "    color=\"lightcoral\",\n",
+    "    edgecolor=\"black\",\n",
+    ")\n",
+    "ax1.set_ylabel(\"R² Score\")\n",
+    "ax1.set_title(\"Neural Networks Models\")\n",
     "ax1.set_xticks(x)\n",
     "ax1.set_xticklabels(models_nn)\n",
     "ax1.legend()\n",
@@ -2790,10 +2806,24 @@
     "ax1.set_ylim(0, 1)\n",
     "\n",
     "# Plot Random Forests\n",
-    "ax2.bar(x - width/2, r2_result_train_rf, width, label='Train', color='skyblue', edgecolor='black')\n",
-    "ax2.bar(x + width/2, r2_result_test_rf, width, label='Test', color='lightcoral', edgecolor='black')\n",
-    "ax2.set_ylabel('R² Score')\n",
-    "ax2.set_title('Random Forests Models')\n",
+    "ax2.bar(\n",
+    "    x - width / 2,\n",
+    "    r2_result_train_rf,\n",
+    "    width,\n",
+    "    label=\"Train\",\n",
+    "    color=\"skyblue\",\n",
+    "    edgecolor=\"black\",\n",
+    ")\n",
+    "ax2.bar(\n",
+    "    x + width / 2,\n",
+    "    r2_result_test_rf,\n",
+    "    width,\n",
+    "    label=\"Test\",\n",
+    "    color=\"lightcoral\",\n",
+    "    edgecolor=\"black\",\n",
+    ")\n",
+    "ax2.set_ylabel(\"R² Score\")\n",
+    "ax2.set_title(\"Random Forests Models\")\n",
     "ax2.set_xticks(x)\n",
     "ax2.set_xticklabels(models_rf)\n",
     "ax2.legend()\n",
@@ -2801,7 +2831,7 @@
     "ax2.set_ylim(0, 1)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   }
  ],
